<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:android="http://schemas.android.com/apk/res/android">
    <string name="app_name">zhou</string>
    <string name="main_title">stitp管理系统</string>
    <string name="action_settings">Settings</string>
    <string name="main_username">请输入用户名</string>
    <string name="main_passwd">请输入密码</string>
    <string name="load">登录</string>
    <string name="register">没有账号？注册</string>
    <string name="load_title">主界面登录按钮</string>
    <string name="button_layout">输入按钮布局</string>
    <string name="main_static_content">主界面中图片和静态文字部件</string>
    <string name="main_image_njupt">主界面中的南邮图片</string>
    <string name="teacher_title">stitp教师版</string>
    <string name="release">发布课题</string>
    <string name="application_audit">申请审核</string>
    <string name="ads_image_name">廣告</string>
    <string name="teacher">教师</string>
    <string name="student">学生</string>
    <string name="teacher_njupt">教师界面图片</string>
    <string name="student_njupt">学生界面南邮图片</string>
    <string name="student_title">stitp学生版</string>
    <string name="apply">申请选做课题</string>
    <string name="submit">提交成果</string>
    <string name="result_audit">成果审核</string>
    <string name="register_checked">没有账号？</string>
    <string name="register_title">stitp用户注册</string>
    <string name="name_real">真实姓名</string>
    <string name="telephone">电话</string>
    <string name="qq">QQ</string>
    <string name="submit_info">提交</string>
    <string name="return_main">返回</string>
    <string name="image_register">注册顶部图片</string>
    <string name="yangxiaohan">爱你，杨晓涵</string>
    <string name="like">你喜欢吗？老婆</string>
    <string name="tell">告诉魏朝鹏</string>
    <string name="issus_publication">发布课题</string>
    <string name="issue_name">课题名称</string>
    <string name="issue_category">课题类别</string>
    <string name="issue_teacher">课题指导教师</string>
    <string name="issue_tach_need">课题需要的核心技术</string>
    <string name="issue_student_need">需要学生人数</string>
    <string name="apply_title">申请课题</string>
    <string name="apply_choose_topic">请选择课题</string>
    <string name="register_passwd_again">请再次输入密码</string>
    <string name="title_activity_submit_achievement">SubmitAchievement</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="title_activity_audit_apply">AuditApply</string>
    <string name="title_activity_examine_achievement">ExamineAchievement</string>
    <string name="pass">通过审核</string>
    <string name="nopass">拒绝通过</string>
    <string name="audit_return">返回</string>
    <string name="audit_name_title">学生姓名:</string>
    <string name="audit_info_title">学生信息：</string>
    <string name="audit_telephone_title">学生电话：</string>
    <string name="audit_qq_title">学生qq：</string>
    <string name="audit_apply_title">申请课题学生信息审核</string>
    <string name="submit_achievement_title">学生课题研究成果提交</string>
    <string name="submit_achievement_content">课题成果:</string>
    <string name="examine_achievement_title">课题研究成果审核</string>
    <string name="examine_submit_title">选择要提交的课题成果</string>
    <string name="examine_achievement_choose_title">选择审核的课题</string>
    <string name="submit_apply">提交申请</string>

</resources>
