<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".page.init.register">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fadingEdge="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/image_register"
                android:src="@drawable/main_njupt" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/register_title"
                android:textSize="30sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/register_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp"
                android:hint="@string/main_username" />

            <EditText
                android:id="@+id/register_passwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/main_passwd" />

            <EditText
                android:id="@+id/register_passwd_again"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/register_passwd_again" />

            <EditText
                android:id="@+id/register_name_real"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name_real" />

            <EditText
                android:id="@+id/register_telephone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/telephone" />

            <EditText
                android:id="@+id/register_qq_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/qq" />

            <RadioGroup
                android:id="@+id/register_user_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/register_teacher"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/teacher" />

                <RadioButton
                    android:id="@+id/register_student"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/student" />

            </RadioGroup>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal">

                <Button
                    android:id="@+id/submit_register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/submit_info" />

                <Button
                    android:id="@+id/return_register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/return_main" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>