<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".page.init.MainActivity">
    <!--静态图片和文本-->

    <LinearLayout
        android:id = "@+id/image_njupt_lin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="1dp"
        android:contentDescription = "@string/main_static_content"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/main_njupt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/main_image_njupt"
            android:src="@drawable/main_njupt" />

        <TextView
            android:id="@+id/main_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/main_title"
            android:textSize="32sp"
            android:textStyle="bold" />


        <EditText
            android:id="@+id/et_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:ems="10"
            android:hint="@string/main_username"
            android:maxLines="2"
            />

        <requestFocus />

        <EditText
            android:id="@+id/et_passwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:ems="10"
            android:hint="@string/main_passwd"
            android:maxLines="2"
            />

        <RadioGroup
            android:id="@+id/radio_group_registrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radio_button_teacher"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:checked="false"
                android:text="@string/teacher"
                />
            <RadioButton
                android:id="@+id/radio_button_student"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:checked="true"
                android:text="@string/student"
                />
        </RadioGroup>

        <Button
            android:id="@+id/button_load"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@android:color/darker_gray"
            android:contentDescription="@string/load_title"
            android:text="@string/load"
             />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="end">

            <!--<TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/register_checked"/>
               -->
            <Button
                android:id="@+id/button_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/register"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="15sp"
                android:background="#00000000"/>
        </LinearLayout>

    </LinearLayout>


</android.support.constraint.ConstraintLayout>