<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".page.teacher.issus_publication">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/main_njupt" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/issus_publication"
                android:textStyle="bold"
                android:textSize="35sp"
                android:textColor="@android:color/primary_text_light"
                android:gravity="center_horizontal"/>

            <EditText
                android:id="@+id/issue_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/issue_name" />
            <EditText
                android:id="@+id/issue_catagory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/issue_category"/>
            <EditText
                android:id="@+id/issue_teacher"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/issue_teacher" />
            <EditText
                android:id="@+id/issue_need"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/issue_tach_need"/>
            <EditText
                android:id="@+id/issue_student_need"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/issue_student_need"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_horizontal"
                android:layout_marginTop="10sp">

                <Button
                    android:id="@+id/issue_submit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/submit_info"/>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/release_button_return"
                    android:text="@string/return_main"/>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>




</android.support.constraint.ConstraintLayout>