<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".page.student.student">

    <!--学生界面静态部分-->
    <LinearLayout
        android:id="@+id/teacher_static_lin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/student_njupt"
            android:src="@drawable/main_njupt" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:paddingVertical="5sp"
            android:text="@string/student_title"
            android:textSize="40sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/student_apply"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/apply" />

        <Button
            android:id="@+id/student_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            />
    </LinearLayout>


</android.support.constraint.ConstraintLayout>