<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".page.student.Yangxiaohan">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/dear"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/yangxiaohan"
            android:textSize="40sp"
            android:textStyle="bold"
            android:textColor="@android:color/holo_red_light"/>

        <EditText
            android:id="@+id/yangxiaohan_like"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:hint="@string/like"
            android:textColorHint="@android:color/background_dark"/>

        <Button
            android:id="@+id/yangxiaohan_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@android:color/darker_gray"
            android:text="@string/tell"
            android:textColor="@android:color/background_light"/>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>